@@ -5,6 +5,7 @@ import java.security.PublicKey;
 import java.security.cert.CertificateException;
 import java.security.cert.CertificateFactory;
 import java.security.cert.X509Certificate;
+import java.util.Collections;
 import java.util.Hashtable;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -31,18 +32,23 @@ public final class SkLdapUtil {
     private SkLdapUtil() {
 
     }
+
     private static final Logger log = LoggerFactory.getLogger(SkLdapUtil.class);
-    public static final String SK_ESTEID_LDAP = "ldaps://esteid.ldap.sk.ee/";
+    private static final String SK_ESTEID_LDAP = "ldaps://esteid.ldap.sk.ee/";
 
-    public static final String DIGI_ID = "Digital identity card";
-    public static final String ID_CARD = "Identity card of Estonian citizen";
+    private static final String DIGI_ID = "Digital identity card";
+    private static final String ID_CARD = "Identity card of Estonian citizen";
+    private static final String E_RESIDENT_DIGI_ID = "Digital identity card of e-resident";
+    private static final String AUTH_CERT_PART = "ou=Authentication,o=";
 
-    //dir name for certificates meant for authentication with digi-id
-    private static final String DIR_NAME_AUTH_DIGI_ID = "ou=Authentication,o=" + DIGI_ID;
+    // distinguished name fragment for authentication certificates using id-card
+    private static final String AUTH_ID_CARD = AUTH_CERT_PART + ID_CARD;
 
-    //dir name for certificates meant for authentication with id-card
-    private static final String DIR_NAME_AUTH_ID_CARD = "ou=Authentication,o=" + ID_CARD;
+    // distinguished name fragment for authentication certificates using digi-id
+    private static final String AUTH_DIGI_ID = AUTH_CERT_PART + DIGI_ID;
 
+    // distinguished name fragment for authentication certificates using e-resident digi-id
+    private static final String AUTH_E_RESIDENT_DIGI_ID = AUTH_CERT_PART + E_RESIDENT_DIGI_ID;
 
     private static DirContext initDirContext() throws NamingException {
         Hashtable<String, Object> env = new Hashtable<>(11);
@@ -58,14 +64,13 @@ public final class SkLdapUtil {
      * authentication (ou=Authentication) certificates for ESTEID identification code
      * @param ctx DirContext from {@link #initDirContext()}
      * @param identificationCode (isikukood) ESTEID identification code, ex 37101010021
-     * @return Map of X509Certificate and directoryName pairs or empty map if none found
+     * @return Map of X509Certificate and distinguished name pairs or empty map if none found
      * @throws NamingException If an error occurred while querying sk LDAP server
      * @throws CertificateException If parsing found certificate fails
      * @see <a href=https://www.skidsolutions.eu/repositoorium/ldap/esteid-ldap-kataloogi-kasutamine/>SK LDAP</a>
      */
     public static Map<X509Certificate, String> findAuthenticationEstEidCertificates(DirContext ctx,
-                                                                                    String identificationCode)
-            throws NamingException, CertificateException {
+            String identificationCode) throws NamingException, CertificateException {
 
         Map<X509Certificate, String> certificateNameMap = new LinkedHashMap<>();
         CertificateFactory certFactory = CertificateFactory.getInstance("X.509");
@@ -74,24 +79,20 @@ public final class SkLdapUtil {
         searchControls.setSearchScope(SearchControls.SUBTREE_SCOPE);
         String filter = "(serialNumber=PNOEE-" + identificationCode + ")";
 
-        NamingEnumeration<SearchResult> answer =
-                ctx.search("dc=ESTEID,c=EE",
-                        filter, searchControls);
+        NamingEnumeration<SearchResult> answer = ctx.search("dc=ESTEID,c=EE", filter, searchControls);
 
         while (answer.hasMore()) {
             SearchResult searchResult = answer.next();
             Attributes attrs = searchResult.getAttributes();
 
-            // directory name
-            // ex cn=ŽAIKOVSKI\,IGOR\,37101010021,ou=Authentication,o=Identity card of Estonian citizen
-            String name = searchResult.getName();
+            // distinguished name
+            // e.g: cn=ŽAIKOVSKI\,IGOR\,37101010021,ou=Authentication,o=Identity card of Estonian citizen
+            String dn = searchResult.getName();
 
-            if (name.contains(DIR_NAME_AUTH_ID_CARD)
-                    || name.contains(DIR_NAME_AUTH_DIGI_ID)) {
+            if (dn.contains(AUTH_ID_CARD) || dn.contains(AUTH_DIGI_ID) || dn.contains(AUTH_E_RESIDENT_DIGI_ID)) {
 
                 // there can be more than one 'userCertificate;binary' attribute
-                NamingEnumeration<Object> certAttrs =
-                        (NamingEnumeration<Object>) attrs.get("userCertificate;binary").getAll();
+                var certAttrs = (NamingEnumeration<Object>) attrs.get("userCertificate;binary").getAll();
                 while (certAttrs.hasMore()) {
                     Object certObject = certAttrs.nextElement();
                     if (certObject != null) {
@@ -99,8 +100,8 @@ public final class SkLdapUtil {
                         try {
                             X509Certificate cert = (X509Certificate) certFactory.generateCertificate(
                                     new ByteArrayInputStream(certBuf));
-                            log.debug("Found cert for {}, name:{}", identificationCode, name);
-                            certificateNameMap.put(cert, name);
+                            log.debug("Found cert for {}, name:{}", identificationCode, dn);
+                            certificateNameMap.put(cert, dn);
                         } catch (CertificateException ce) {
                             log.error("Invalid certificate for {}", identificationCode);
                             throw ce;
@@ -117,27 +118,27 @@ public final class SkLdapUtil {
      * Find id-kaart (o=Identity card of Estonian citizen) and digi-id (o=Digital identity card)
      * authentication (ou=Authentication) certificate for each ESTEID identification code from sk ESTEID LDAP and
      * extract public keys
-     * @param ids ESTEID identification codes (isikukood), ex 37101010021
-     * @return List of public keys for each identification code or empty list if none found
+     * @param ids ESTEID identification codes (isikukood), e.g 37101010021
+     * @return Map of public keys with key labels for each identification code or empty list if none found
      * @throws NamingException If an error occurred while querying sk LDAP server
      * @throws CertificateException If parsing found certificate fails
      * @see <a href=https://www.skidsolutions.eu/repositoorium/ldap/esteid-ldap-kataloogi-kasutamine/>SK LDAP</a>
      */
-    public static Map<PublicKey, String> getCertKeysWithLabels(String[] ids)
+    public static Map<PublicKey, String> getPublicKeysWithLabels(String[] ids)
             throws NamingException, CertificateException {
 
         if (ids == null) {
-            return Map.of();
+            return Collections.emptyMap();
         }
         DirContext ctx = initDirContext();
         Map<PublicKey, String> keysWithLabels = new LinkedHashMap<>();
         try {
-            for (String id : ids) {
+            for (String id: ids) {
                 Map<X509Certificate, String> certs = findAuthenticationEstEidCertificates(ctx, id);
                 for (var certNameEntry: certs.entrySet()) {
                     X509Certificate cert = certNameEntry.getKey();
-                    String dirName = certNameEntry.getValue();
-                    String keyLabel = getKeyLabel(cert, dirName);
+                    String distinguishedName = certNameEntry.getValue();
+                    String keyLabel = getKeyLabel(cert, distinguishedName);
                     log.debug("Adding key label {}", keyLabel);
                     keysWithLabels.put(cert.getPublicKey(), keyLabel);
                 }
@@ -163,10 +164,10 @@ public final class SkLdapUtil {
      * Get label value from certificate. Used as KeyLabel value in FBS header. For SK issued certificates,
      * use CN part of Subject as label, for other certs use x509 Subject
      * @param cert certificate to be used for label creation
-     * @param dirName optional directory name of certificate. If not present then value is null.
+     * @param dName the distinguished name (optional) - used to add certificate type to the label
      * @return label parsed from cert
      */
-    private static String getKeyLabel(X509Certificate cert, @Nullable String dirName)  {
+    private static String getKeyLabel(X509Certificate cert, @Nullable String dName)  {
         // KeyLabel is UI specific field, so its value is not specified in the Spec.
         // DigiDoc4-Client uses this field to hint user what type of eID was used for encryption
         // https://github.com
@@ -176,9 +177,8 @@ public final class SkLdapUtil {
         // cdoc20-lib is not trying to be compatible DigiDoc4-Client as this value is not standardized
         // if compatibility is required then lib client must write its own certificate parsing
 
-
         // SK issued id-cards have following Subject:
-        // Subject: C = EE, O = ESTEID, OU = authentication, CN = "\C5\BDAIKOVSKI,IGOR,37101010021",
+        // Subject: C = EE, CN = "\C5\BDAIKOVSKI,IGOR,37101010021",
         //        SN = \C5\BDAIKOVSKI, GN = IGOR, serialNumber = 37101010021
         // use CN as label.
         // If it fails, use whole certificate subject
@@ -189,13 +189,13 @@ public final class SkLdapUtil {
                     .toList();
             if (cn.size() == 1) {
                 String keyLabel = cn.get(0);
-                if (dirName != null) {
-                    if (dirName.contains(DIGI_ID)) {
+                if (dName != null) {
+                    if (dName.contains(DIGI_ID)) {
                         keyLabel += " (digi-id)";
-                    }
-
-                    if (dirName.contains(ID_CARD)) {
+                    } else if (dName.contains(ID_CARD)) {
                         keyLabel += " (id-card)";
+                    } else if (dName.contains(E_RESIDENT_DIGI_ID)){
+                        keyLabel += " (e-resident digi-id)";
                     }
                 }
                 return keyLabel;
